# DENG

./: .gitignore  Dockerfile.kestra  README.md  __ubLabs__subjects.ipynb  __ubLabs__testing_ub.ipynb  affairs.ipynb  dataconnector.py  datatransform.py  docker-compose.yml  main.py  openparl.py  persona.md  pyproject.toml  test.ipynb  test.py  testing.ipynb
diagrams/: export_png.sh
flows/: openparl_ingest.yml
scripts/: dataconnector.py  dataingest.py  datatransform.py  test.ipynb
sql/: Controversial_Votes.sql  Rebels.sql  Yay_Sayers.sql
terraform/: main.tf  variables.tf
