[project]
name = "deng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "swissparlpy>=1.0.0",
    "tqdm>=4.67.3",
]
